apache and nginx settting

--- a/server_setting/nginx/nginx.conf
+++ b/server_setting/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
     #tcp_nopush     on;
 
     #keepalive_timeout  0;
-    keepalive_timeout  65;
+    http2_idle_timeout 10s;
 
     #gzip  on;
 
@@ -99,11 +99,12 @@ http {
         listen       443 ssl http2;
         server_name  localhost;
 
-        ssl_certificate      /home/lee2/serverset/localhost.crt;
-        ssl_certificate_key  /home/lee2/serverset/localhost.key;
+        ssl_certificate      /home/oren/PRETT2/server_keys/localhost.crt;
+        ssl_certificate_key  /home/oren/PRETT2/server_keys/localhost.key;
 
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
+        http2_recv_timeout 10s;
 
         ssl_ciphers  HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers  on;
