apache timeout update

--- a/server_setting/apache/httpd.conf
+++ b/server_setting/apache/httpd.conf
@@ -508,4 +508,8 @@ SSLRandomSeed connect builtin
 <IfModule http2_module> 
   ProtocolsHonorOrder On
   Protocols h2 h2c
+  Keepalive On
+  KeepAliveTimeout 5
+  Timeout 5
 </IfModule>
+
