nginx conf update

--- a/server_setting/nginx/nginx1197.conf
+++ b/server_setting/nginx/nginx1197.conf
@@ -27,7 +27,8 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    keepalive_timeout  5s;
+    keepalive_timeout  10s;
+    client_header_timeout 10s;
     #http2_idle_timeout 10s;
 
     #gzip  on;
