--- a/server_setting/nginx/nginx.conf
+++ b/server_setting/nginx/nginx.conf
@@ -27,8 +27,8 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    #keepalive_timeout  5s;
-    http2_idle_timeout 5s;
+    keepalive_timeout  5s;
+    #http2_idle_timeout 10s;
 
     #gzip  on;
 
@@ -96,7 +96,7 @@ http {
     # HTTPS server
     #
     server {
-        listen       443 ssl http2;
+        listen       0.0.0.0:443 ssl http2;
         server_name  localhost;
 
         ssl_certificate      /home/oren/PRETT2/server_keys/localhost.crt;
@@ -104,7 +104,8 @@ http {
 
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
-        http2_recv_timeout 5s;
+        client_header_timeout 5s;
+        #http2_recv_timeout 10s;
 
         ssl_ciphers  HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers  on;
