nginx 1.19.7 conf update

--- a/server_setting/nginx/nginx1197.conf
+++ b/server_setting/nginx/nginx1197.conf
@@ -27,9 +27,9 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    keepalive_timeout  10s;
-    client_header_timeout 10s;
-    #http2_idle_timeout 10s;
+    keepalive_timeout  5s;
+    client_header_timeout 5s;
+    #http2_idle_timeout 5s;
 
     #gzip  on;
 
@@ -97,7 +97,7 @@ http {
     # HTTPS server
     #
     server {
-        listen       443 ssl http2;
+        listen       0.0.0.0:443 ssl http2;
         server_name  localhost;
 
         ssl_certificate      /home/oren/PRETT2/server_keys/localhost.crt;
@@ -105,7 +105,7 @@ http {
 
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
-        #http2_recv_timeout 10s;
+        http2_recv_timeout   5s;
 
         ssl_ciphers  HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers  on;
