--- a/server_setting/h2o/h2oconf.conf
+++ b/server_setting/h2o/h2oconf.conf
@@ -2,6 +2,7 @@ http2-idle-timeout: 5
 hosts:
   "localhost":
     listen:
+      host: 0.0.0.0
       port: 443
       ssl:
         certificate-file: /home/oren/PRETT2/server_keys/localhost.crt
