--- a/server_setting/nginx/nginx.conf
+++ b/server_setting/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
     #tcp_nopush     on;
 
     keepalive_timeout  5s;
-    #http2_idle_timeout 10s;
+    http2_idle_timeout 5s;
 
     #gzip  on;
 
